# solstice-config

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
solstice/config/development/: artellapipe-libs-naming.yml
solstice/config/production/: artellapipe-project.yml
